<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.magdales_and_genson.dreamlister.AddOrUpdateItem">

    <ImageView
        android:id="@+id/camera_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/camera"
        android:visibility="visible" />

    <TextView
        android:id="@+id/camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/camera_photo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/pick_image_text"
        android:visibility="visible" />

    <EditText
        android:id="@+id/item_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera_text"
        android:layout_margin="10dp"
        android:hint="@string/item_name_text"
        android:textSize="16sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/item_price_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name_edittext"
        android:layout_margin="10dp"
        android:hint="@string/item_price_text"
        android:textSize="16sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/item_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_price_edittext"
        android:layout_margin="10dp"
        android:hint="@string/item_description_text"
        android:textSize="16sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_description_edittext"
        android:clickable="true"
        android:text="@string/add_item_text"
        android:visibility="visible" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_button"
        android:clickable="true"
        android:text="Wishlist"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/buttons_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:visibility="invisible">

        <Button
            android:id="@+id/update_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_text" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_text" />
    </LinearLayout>
</RelativeLayout>
